log
Wed 20 Mar 2024 08:06:20 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:7: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   49 |       push_back(L, dato);
      |       ^~~~~~~~~
      |       pushBack
cc1: all warnings being treated as errors
Compilation failed
cef3bc4
Wed 20 Mar 2024 08:06:37 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
1cfa812
Wed 20 Mar 2024 08:08:44 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|4
total_score: 10/70
1dba5ba
Wed 20 Mar 2024 08:08:59 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
f456352
Wed 20 Mar 2024 08:12:15 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:83:24: error: too many arguments to function ‘popCurrent’
   83 |     if (*dato == elem) popCurrent(L, elem);
      |                        ^~~~~~~~~~
In file included from exercises.c:6,
                 from test.c:5:
arraylist.h:32:7: note: declared here
   32 | void *popCurrent(List *L);
      |       ^~~~~~~~~~
Compilation failed
a8d57af
Wed 20 Mar 2024 08:12:54 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
dd9df65
Wed 20 Mar 2024 08:19:39 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  3|2
total_score: 40/70
a37e49d
Wed 20 Mar 2024 08:20:40 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
fbf4b01
Wed 20 Mar 2024 08:22:57 PM UTC: 
 exercises.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:104:13: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘:’ token
  104 |   int * elem:
      |             ^
exercises.c:104:13: error: expected expression before ‘:’ token
exercises.c:106:9: error: ‘elem’ undeclared (first use in this function)
  106 |   while(elem != NULL){
      |         ^~~~
exercises.c:106:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
7d5f303
Wed 20 Mar 2024 08:23:05 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
61e113f
